-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.12.8, Lustre 2.15.0, Lustre 2.15.6
-
3
-
9223372036854775807
This issue was created by maloo for Qian Yingjin <qian@ddn.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/acf1ad3c-16d3-4cac-9376-40485f9ed5f1
test_26a failed with the following error originally:
/usr/lib64/lustre/tests/test-framework.sh: line 9622: ((: > 1629171082: syntax error: operand expected (error token is "> 1629171082") client not evicted from OST
More recently this is failing with:
Update not seen after 99s: want '17' got '18' recovery-small test_26b: @@@@@@ FAIL: Client was not evicted by MDS
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
recovery-small test_26a - client not evicted from OST
- is duplicated by
-
LU-19242 recovery-small test_26b: Client was not evicted by MDS
-
- Resolved
-
- is related to
-
LU-12066 recovery-small test 26b fails with “Client was not evicted by ost rc=1”
-
- Resolved
-
- is related to
-
LU-10632 recovery-small test 26a fails with ‘client not evicted from OST’
-
- Resolved
-
-
LU-16002 Ping evictor delayed client eviction for 3 ping interval more than defined
-
- Resolved
-
-
LU-14748 gcc9 (RHEL 7.x with devtoolset-9) build failure (5.4.x kernel)
-
- Resolved
-
-
LU-16271 replay-single test_89 FAIL: 20480 blocks leaked
-
- Resolved
-
- mentioned in
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...
-
Page Loading...