LU-14947 test: recovery_small/26a fix

- issue writes to all OSTs prior test to make sure client
  exports are not dropped by server as having no updates
- set rq_sent when request is dropped by fail_check to
  reconnect not immediately but in timely manner

Test-Parameters: testlist=recovery-small env=ONLY=26a
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: Idb219a0453c867903528130669d151bbb6c7bab4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56949
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>